<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">V-Run</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="note">NOTE:\n1.Name/DOB/ID card Number/Photos/Address should be clearly visible on your ID card respectively.\n 2.ID card image should not be blur,titled, photocopied or rotated. Kindly ensure that your face is clearly visible in the id card."</string>
    <string name="google_map_api_key">${MAPS_API_KEY}</string>
    <string name="razorpay_key">${RAZORPAY_API_KEY}</string>
    <string name="selfie">Please upload your clear front facing selfie (face should be clearly visible, avoid wearing shades and headgears)</string>
    <string name="otp_text">An OTP has been sent to you for verification of your mobile number.\nPlease enter the OTP to proceed.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen_maps">HomeScreenMapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="net_earn">"This Month Net Earning"</string>
    <string name="state">"Dehradoon, Uttarakhand"</string>
    <string name="lang_hindi">हिंदी</string>
    <string name="lang_eng">English</string>
    <string name="monthly_pay">"Monthly Payout"</string>

    <string name="address_proof">Upload address proof</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="merchant">Are you currently working with any merchant?</string>
    <string name="another_merchant">Do you work with any other merchant ?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="my_earning">My Earning</string>
    <string name="history">History</string>
    <string name="my_nearest_service">My Nearest Service</string>
    <string name="service_request">Service Request</string>
    <string name="language">Language</string>
    <string name="monthly_calender">Monthly Calender</string>
    <string name="document">Document</string>
    <string name="rate_list">Rate List</string>
    <string name="on_duty">On Duty</string>
    <string name="off_duty">OFF Duty</string>
    <string name="hide_calender">Hide Calender</string>
    <string name="select_language">Select Language</string>
    <string name="request_form">Request Form</string>
    <string name="subject">Subject</string>
    <string name="issue_description">Issue Description</string>
    <string name="please_login">Please Login to continue</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No</string>
    <string name="send_otp">Send Otp</string>
    <string name="i_m_a_new_user_n_signup">I\'m a new user?\n SignUp</string>
    <string name="my_wallet">My Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="security_amount">Security Amount</string>
    <string name="withdrawable_balance">Withdrawable Balance</string>
    <string name="transaction">Transaction</string>
    <string name="see_all">See All</string>
    <string name="hide_all">Hide All</string>
    <string name="to_display_fun_fact_about_the_user_s_location">To display fun fact about the user\'s location</string>
    <string name="location">Location</string>
    <string name="don_t_worry_your_data_is_private">Don\'t worry your data is private</string>
    <string name="storage_amp_media"><![CDATA[Storage & Media]]></string>
    <string name="because_why_not">Because why not</string>
    <string name="call">Call</string>
    <string name="continue_bt">Continue</string>
    <string name="update_profile">Update Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email-id</string>
    <string name="dob">DOB</string>
    <string name="pan_card_no">Pan Card No</string>
    <string name="aadhar_card_no">Aadhar Card No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_new_account">Create new Account</string>
    <string name="phone">Phone</string>
    <string name="sign_up">Sign up</string>
    <string name="already_register_sign_in">Already Register? \n sign in</string>
    <string name="update_1_2">Update 1/2</string>
    <string name="update_2_2">Update 2/2</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="status">Status</string>
    <string name="driving_n_licence">Driving \nLicence</string>
    <string name="dl_no">DL No</string>
    <string name="bank_name">Bank Name</string>
    <string name="please_enter_your_account_no">Please Enter your account No</string>
    <string name="bank_details">Bank Details</string>
    <string name="pan_card">Pan Card</string>
    <string name="pan_no">Pan No</string>
    <string name="name_as_pan">Name as Pan</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="enter_all_merchant_name_you_are_working_with">Enter All merchant name you are working with</string>
    <string name="enter_merchant_name">Enter merchant name</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="enter_merchant_id">Enter merchant ID</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="save">save</string>
    <string name="your_selfie">Your Selfie</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="aadhar_n_front">Aadhar\n front</string>
    <string name="aadhar_n_rear">Aadhar\n Rear</string>
    <string name="current_address">Current Address</string>
    <string name="address">address</string>
    <string name="city">City</string>
    <string name="pin_code">Pin code</string>
    <string name="pay_due">Pay Due</string>
    <string name="recharge">recharge</string>
    <string name="withdraw">Withdraw</string>
    <string name="unpaid">UnPaid</string>
    <string name="due_date">Due Date</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User ID</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="available_balance">Available balance</string>
    <string name="amount">Amount</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="show_less">Show Less ↑</string>
    <string name="show_more">Show more</string>
    <string name="submit">submit</string>
    <string name="merchant_mapping">Merchant Mapping</string>
    <string name="bank_n_details">Bank \nDetails</string>
    <string name="renter_your_account_no">Renter your account No</string>
    <string name="resend_otp">Resend otp</string>
    <string name="enter_payment_description">Enter Payment Description</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_amount_to_be_paid">Enter Amount to be paid</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="make_payment">Make Payment</string>
    <string name="enter_your_upi_id">Enter your UPI Id</string>
    <string name="cancel">Cancel</string>
    <string name="vrun_app">Hello [name] You registered an account on V-Run App.Your Document Verification is under process, we will connect with you shortly.</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="hide_report">Hide Report</string>
    <string name="my_nearest_swap_center">My Nearest Swap Center</string>

    <string name="channel_id" translatable="false">com.pearl.v_ride_lib</string>
    <string name="channel_name" translatable="false">V-Run</string>
    <string name="str_firebase_push_notification_demo">Firebase Push Notification Android Example</string>

</resources>