<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homemenu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/user"
        />

    <item
        android:id="@+id/wallet"
        android:icon="@drawable/ic_account_balance_wallet"
        android:title="@string/wallet"
        />

    <item
        android:id="@+id/earning"
        android:title="@string/my_earning"
        android:icon="@drawable/ic_baseline_wallet"
        />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_baseline_history"
        android:title="@string/history"/>

    <item
        android:id="@+id/nearest_service"
        android:title="@string/my_nearest_service"
        android:icon="@drawable/nearby"
        />

    <item
        android:id="@+id/issue"
        android:icon="@drawable/report"
        android:title="@string/service_request"/>

    <item
        android:id="@+id/document"
        android:title="@string/document"
        android:icon="@drawable/file"
        />

    <item
        android:id="@+id/language"
        android:title="@string/language"
        android:icon="@drawable/file"
        />
    <item
        android:id="@+id/logout"
        android:title="Update"
        android:icon="@drawable/ic_ogin"/>


</menu>