<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <include layout="@layout/custom_appbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/selectLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_language"

                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnHindiLang"
                        android:text="@string/lang_hindi"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:id="@+id/btnEngLang"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_eng"/>



                </LinearLayout>


            </LinearLayout>





        </ScrollView>
    </LinearLayout>
</layout>