<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_combo"
    android:padding="5dp"
    android:orientation="vertical"
  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="OK! We need some access!"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/marker"/>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/locpermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_display_fun_fact_about_the_user_s_location"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="visible"
            android:id="@+id/img_loc"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/warning" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:id="@+id/img_loc_check"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/check" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/archive"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/storage"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_amp_media"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_worry_your_data_is_private"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                />


        </LinearLayout>
        <ImageView

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:id="@+id/img_sto_check"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/check" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:id="@+id/img_sto"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/warning"
            android:visibility="visible" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/call"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/phone"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/because_why_not"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/black"
                />


        </LinearLayout>

        <ImageView

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:id="@+id/img_call_check"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/check" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:id="@+id/img_call"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/warning" />
    </LinearLayout>


    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_bt"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_marginTop="80dp"
        app:cornerRadius="15dp"/>


</LinearLayout>