<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_combo"
    tools:context="com.pearl.v_ride.IssueRequestActivity">


<include
    layout="@layout/custom_appbar"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
    <TextView
        android:id="@+id/requestTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_form"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"/>


    <!--<com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email-id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:backgroundTint="@color/color_secondary">

       &lt;!&ndash; <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
           />&ndash;&gt;

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectTIL"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subjectET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        >
<!--
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLines="4"
        android:imeOptions="actionDone"
        android:hint="Issue Description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:backgroundTint="@color/color_secondary">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="4"
            android:inputType="text" />
    &lt;!&ndash;    <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:maxLines="4"
            android:imeOptions="actionDone"
            android:hint="Issue Description"/>&ndash;&gt;

    </com.google.android.material.textfield.TextInputLayout>

-->
        <EditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/btn_backgraund"
            android:hint="@string/issue_description"
            android:imeOptions="actionDone"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:padding="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="textMultiLine"
            android:maxLines="4"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/clickIV"
               android:layout_weight=".1"
               android:layout_width="0dp"
               android:layout_gravity="center"
               android:layout_height="@dimen/_20sdp"
               android:layout_marginTop="@dimen/_12sdp"
               android:src="@drawable/ic_camera"/>
           <ImageView
               android:id="@+id/setImageIV"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="@dimen/_120sdp"
               android:layout_marginTop="@dimen/_12sdp"
               android:src="@drawable/delivery_man"/>


       </LinearLayout>




    </LinearLayout>

        <Button
            android:id="@+id/issue_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/color_secondary"
            android:shadowRadius="20"
            android:text="Submit"
            app:cornerRadius="8dp" />


    </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>